# Chat-FastAPI

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requires.txt
chat/: data.py  data_alch.py  data_file.py  data_sql.py  items.db  items.json  main.py  models.py
chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chat/routers/: items_router.py
chat/static/: index.html
chat/templates/: freq.html  items.html  layout.html
