[project]
name = "chat"
version = "0.1.0"
description = "Simple chat package based on FastAPI"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.20",
    "SQLAlchemy>=2.0.41"

]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["chat", "chat.routers"]

[tool.setuptools.package-data]
chat = ["static/**/*", "templates/**/*", "items.json"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"